--- a/test.html
+++ b/test.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko" >
+<html lang="ko">
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>사이버전 실습교육 시스템</title> 
-	<link rel="stylesheet" type="text/css" href="../css/style1.css">
-	<script type="text/javascript" src="../js/jquery-3.3.1.min.js" charset="utf-8"></script>
-	<script type="text/javascript" src="../js/ui.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>사이버전 실습교육 시스템</title>
+    <link rel="stylesheet" type="text/css" href="../css/style1.css">
+    <script type="text/javascript" src="../js/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../js/ui.js"></script>
 </head>
 
-<body> 
-	<h1>깃헙에서 수정했다~~~야호~~~vscodetest 완료!!!!!!!!!!!!!!!!!!!!</h1>
+<body>
+    <h1>2020깃헙에서 수정했다~~~야호~~~vscodetest 완료!!!!!!!!!!!!!!!!!!!!</h1>
 </body>
