스터디2일차

--- a/vuestudy/st01.html
+++ b/vuestudy/st01.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <h1>2020깃헙에서 수정했다~~~야호~~~vscodetest 완료!!!!!!!!!!!!!!!!!!!!</h1>
-
+    <h1>스터디 2일차</h1>
     <div id="app">
         {{ message }}
 
