--- a/vuestudy/st02.html
+++ b/vuestudy/st02.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
+    <h1>스터디 2일차</h1>
     <section id="app4">
         <header>
-            <h1>{{ message }}</h1>
+            <h2>{{ message }}</h2>
         </header>
 
         <article>
