--- a/vuestudy/st06.html
+++ b/vuestudy/st06.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>vue study</title> 
+    <title>vue study</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.0.1/dist/vue-router.js"></script>
 </head>
@@ -12,20 +12,23 @@
 <body>
     <h1>스터디 5일차</h1>
     <section id="app">
-        <h1>네스티드 라우터 예제</h1> 
-        <router-view></router-view>
-        <!--User 컴포넌트가 뿌려질 영역 -->
+        <h1>네임드 뷰 예제</h1>
+        <router-view></router-view> 
     </section>
 
-     
+
     <script>
         //컴포넌트 정의
         var User = {
             template: '<div>Uset component <router-view></router-view></div>'
         };
-        
-        var UserProfile = { template: '<p>User profile component </p>' };
-        var UserPost = { template: '<p>User Post component </p>' };
+
+        var UserProfile = {
+            template: '<p>User profile component </p>'
+        };
+        var UserPost = {
+            template: '<p>User Post component </p>'
+        };
 
         // 각 URL에 맞춰 표시할 컴포넌트 지정
         var routes = [{
@@ -49,7 +52,7 @@
         // 뷰 인스턴스에 라우터 추가
         var app = new Vue({
             router
-        }).$mount('#app'); 
+        }).$mount('#app');
     </script>
 
 </body>
