--- a/vuestudy/st05.html
+++ b/vuestudy/st05.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>스터디 5일차</h1>
+    <h1>스터디 5일차 : 네스티드 라우터</h1>
     <section id="app">
         <h1>네스티드 라우터 예제</h1> 
         <router-view></router-view>
