--- a/vuestudy/st03.html
+++ b/vuestudy/st03.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>스터디 3일차</h1>
+    <h1>스터디 3일차 : 이벤트</h1>
     <section id="app">
         <child-component v-bind:propsdata="message"></child-component>
     </section>
