--- a/vuestudy/st04.html
+++ b/vuestudy/st04.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>스터디 4일차</h1>
+    <h1>스터디 4일차 : 라우터</h1>
     <section id="app">
         <h1>뷰 라우터 예제</h1>
         <p>
