동영상 추가

--- a/myWorks/web/publishing_guide.html
+++ b/myWorks/web/publishing_guide.html
@@ -96,11 +96,18 @@
 			  		</tr>
 				</thead>
 				<tbody>
+					
 					<tr>
 						<td class="tit">메인</td> 
 						<td class="file"><a href="html/main.html" target="_blank">html/main.html</a></td> 
 						<td class="stat">●</td>
 						<td class="center">2020. 04.13</td> 
+					</tr>
+					<tr>
+						<td class="tit">동영상</td>
+						<td class="file"><a href="html/popup01.html" target="_blank">html/popup01.html</a></td>
+						<td class="stat">●</td>
+						<td class="center">2020. 04.13</td>
 					</tr>
 					<tr>
 						<td class="tit">적용기술</td> 
