1차수정반영

--- a/myWorks/web/html/guidemain.html
+++ b/myWorks/web/html/guidemain.html
@@ -59,7 +59,7 @@
 						<p>일반 또는 긴급한 공지 사항을<br> 전해드립니다.</p>
 					</li>
 					<li>
-						<a href=""><span>1:1문의</span></a>
+						<a href=""><span>1:1 문의</span></a>
 						<p>문의 사항을 등록하면<br>연락처로 답변을 드립니다.</p>
 					</li>
 					<li>
@@ -114,7 +114,7 @@
 
 		<article class="iconMenu">
 			<ul>
-				<li><a href="#">고객센터</a></li>
+				<li><a href="#none">고객센터<br>1883-8221</a></li>
 				<li><a href="">카카오톡 채널 문의</a></li>
 				<li><a href="">1:1 문의</a></li>
 				<li><a href="">사용 후기</a></li>
