--- a/myWorks/web/html/main.html
+++ b/myWorks/web/html/main.html
@@ -173,7 +173,7 @@
 				<div class="mainSec-sec03">
 					<div class="inner">
 						<article class="titArea">
-							<h2>"Hey, buddy!<br><em class="colorPurple2">Open English Play."</em></h2> 
+							<h2>"Hey, buddy!<br> <em class="colorPurple2">Open English Play"</em></h2> 
 							<p>
 								영어 친구 버디를 불러보세요! 영어로 대화하며 학습을 하고<br>
 								기기를 제어하며 일상 얘기를 하면서 말하기가 쉬워집니다.
@@ -646,7 +646,7 @@
 
 		<article class="iconMenu">
 			<ul>
-				<li><a href="#none">고객센터</a></li>
+				<li><a href="#none">고객센터<br>1883-8221</a></li>
 				<li><a href="#none">카카오톡 채널 문의</a></li>
 				<li><a href="#none">1:1 문의</a></li>
 				<li><a href="#none">사용 후기</a></li>
