--- a/myWorks/web/html/Inquire.html
+++ b/myWorks/web/html/Inquire.html
@@ -66,8 +66,8 @@
 							<tbody>
 								<tr>
 									<th><em>*</em> 문의 유형</th>
-									<td>
-										<select>
+									<td> 
+										<select id="sel">
 											<option value="">문의 유형을 선택</option>
 										</select>
 									</td>
@@ -118,7 +118,7 @@
 
 		<article class="iconMenu">
 			<ul>
-				<li><a href="#">고객센터</a></li>
+				<li><a href="#none">고객센터<br>1883-8221</a></li>
 				<li><a href="">카카오톡 채널 문의</a></li>
 				<li><a href="">1:1 문의</a></li>
 				<li><a href="">사용 후기</a></li>
