--- a/myWorks/web/html/strategy.html
+++ b/myWorks/web/html/strategy.html
@@ -443,7 +443,7 @@
 
 		<article class="iconMenu">
 			<ul>
-				<li><a href="#">고객센터</a></li>
+				<li><a href="#none">고객센터<br>1883-8221</a></li>
 				<li><a href="">카카오톡 채널 문의</a></li>
 				<li><a href="">1:1 문의</a></li>
 				<li><a href="">사용 후기</a></li>
