적용기술수정2

--- a/myWorks/web/html/technology.html
+++ b/myWorks/web/html/technology.html
@@ -221,7 +221,7 @@
 							<div id="tab1" class="tabcontent current">
 								<div class="scroll">
 									<ul>
-										<li>Hey, buddy, show me the 애플리케이션 이름.”</li>
+										<li>“Hey, buddy, show me the 애플리케이션 이름.”</li>
 										<li>“Hey, buddy, open 애플리케이션 이름.”</li>
 										<li>“Hey, buddy, go to 애플리케이션 이름.”</li>
 										<li>“Hey, buddy, start 애플리케이션 이름.”</li>
