학습전략 수정

--- a/myWorks/web/html/strategy.html
+++ b/myWorks/web/html/strategy.html
@@ -232,15 +232,15 @@
 						<div class="textbook">
 							<h3>3P 학습을 위한 원고부터 커리큘럼까지<br>어린이 영어 전문가가 직접 개발한 학습 교재</h3>
 							<div class="textbookLeft">
-								<input type="radio" id="radio" name="radio" checked checked onclick="return false;"><label for="radio"><img src="../images/strategy/img_books1.jpg" alt=""></label>
+								<input type="radio" id="radio" name="radio" checked><label for="radio"><img src="../images/strategy/img_books1.jpg" alt=""></label>
 								<span class="imgWrap view1">
 									<img src="../images/strategy/img_books1.jpg" alt="">
 								</span>
-								<input type="radio" id="radio1" name="radio" checked onclick="return false;"><label for="radio1"><img src="../images/strategy/img_books2.jpg" alt=""></label>
+								<input type="radio" id="radio1" name="radio"><label for="radio1"><img src="../images/strategy/img_books2.jpg" alt=""></label>
 								<span class="imgWrap view2">
 									<img src="../images/strategy/img_books2.jpg" alt="">
 								</span>
-								<input type="radio" id="radio2" name="radio" checked onclick="return false;"><label for="radio2"><img src="../images/strategy/img_books3.jpg" alt=""></label>
+								<input type="radio" id="radio2" name="radio"><label for="radio2"><img src="../images/strategy/img_books3.jpg" alt=""></label>
 								<span class="imgWrap view3">
 									<img src="../images/strategy/img_books3.jpg" alt="">
 								</span>
