메인 슬라이드 변경

--- a/myWorks/web/html/main.html
+++ b/myWorks/web/html/main.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="utf-8">
-	<title>buddy</title> 
+	<title>buddy</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="subject" content="[스피킹 버디]">
 	<meta name="keywords" content="스피킹 버디">
-	<meta name="description" content="[스피킹 버디]">   
+	<meta name="description" content="[스피킹 버디]">
 	<link href="../css/style.css" rel="stylesheet">
-	<script type="text/javascript" src="../js/jquery-3.3.1.min.js" charset="utf-8"></script> 
+	<script type="text/javascript" src="../js/jquery-3.3.1.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../js/owl.carousel.js"></script>
 	<script type="text/javascript" src="../js/common.js"></script>
 </head>
+
 <body>
 	<div id="wrapper">
 		<header>
@@ -26,7 +28,7 @@
 						<li><a href="#">학습콘텐츠</a></li>
 						<li>
 							<a href="#" class="subMenu">사용안내</a>
-							<ul class="depth2">
+							<ul class="depth2 db">
 								<li><a href="#">사용안내</a></li>
 								<li><a href="#">FAQ</a></li>
 								<li><a href="#">공지사항</a></li>
@@ -38,16 +40,16 @@
 					<button type="button" class="close">닫기</button>
 				</nav>
 			</div>
-		</header>  
+		</header>
 
 		<section class="container">
-			<article class="mainopy"> 
+			<article class="mainopy">
 				<div class="owl-carousel owl-theme">
 					<div class="item type01">
 						<div class="inner">
 							<dl>
 								<dt>
-									<i>Special 20% Sale Event Go!</i> 
+									<i>Special 20% Sale Event Go!</i>
 									365일 영어로 <em class="colorPurple">말 걸어주는</em><br>
 									똑똑한 친구 스피킹 버디
 								</dt>
@@ -64,7 +66,7 @@
 								<dt>
 									<i>Special 20% Sale Event Go!</i>
 									영어 말하기 <em class="colorSkyPink">일등 친구</em>가<br>
-									내 아이방에 쏙! 
+									내 아이방에 쏙!
 								</dt>
 								<dd>
 									정확한 영어 말하기 성공을 위한 Ai 기반의 대화형 학습 "스피킹 버디"<br>
@@ -80,7 +82,7 @@
 								<dt>
 									<i>Special 20% Sale Event Go!</i>
 									영어 말하기를 위한 AI 기반<br>
-									<em class="colorAqua">대화형 학습</em> 스피킹 버디 
+									<em class="colorAqua">대화형 학습</em> 스피킹 버디
 								</dt>
 								<dd>
 									어린이의 영어 말하기를 위한 AI 음성 인식 기술을 적용한 전용 학습기와<br>
@@ -91,26 +93,26 @@
 								</dd>
 							</dl>
 						</div>
-					</div> 
+					</div>
 				</div>
 				<div class="noticeBox">
-					<div class="notice">  
+					<div class="notice">
 						<ul>
 							<li><a hrfef="">[인사말] 스피킹 버디 비공개 시범 서비스에 참여해 주셔서 감사합니다. 2019-12-1</a></li>
 							<li><a hrfef="">[인사말] 스피킹 버디 비공개 시범 서비스에 참여해 주셔서 감사합니다. 2019-12-1</a></li>
-							<li><a hrfef="">[인사말] 스피킹 버디 비공개 시범 서비스에 참여해 주셔서 감사합니다. 2019-12-1</a></li> 
+							<li><a hrfef="">[인사말] 스피킹 버디 비공개 시범 서비스에 참여해 주셔서 감사합니다. 2019-12-1</a></li>
 						</ul>
 						<span class="btnW">
 							<button type="button" class="btnUp">위</button>
-							<button type="button" class="btnDown">아래</button> 
+							<button type="button" class="btnDown">아래</button>
 						</span>
 
 					</div>
 				</div>
 			</article>
 
-			<div class="mainConts">  
-				 <div class="mainSec-sec01">
+			<div class="mainConts">
+				<div class="mainSec-sec01">
 					<div class="inner">
 						<article class="titArea">
 							<h2>스피킹 버디가 최적의<br><em class="colorBlue">영어 노출 환경</em>을 만듭니다.</h2>
@@ -119,11 +121,11 @@
 								<i>아이 일과 시간에 맞춤, 영어 학습 알람</i>
 							</p>
 						</article>
-						<article class="txt type01"> 
+						<article class="txt type01">
 							<p>
-								<strong>아이에게 매일매일 자주<br>영어로 말을 걸어 줍니다.</strong> 
+								<strong>아이에게 매일매일 자주<br>영어로 말을 걸어 줍니다.</strong>
 								<i>"Hi! Do you want to open the new<br>
-								episode of Emma and Guardians?</i>
+									episode of Emma and Guardians?</i>
 							</p>
 							<span>
 								<em>버디가 오늘 해야할 학습을 권유합니다.</em>
@@ -136,7 +138,7 @@
 							<p>
 								<strong>집중력이 떨어질 때쯤<br>버디가 말을 겁니다.</strong>
 								<i>"Which do you like BTS or EXO?</i>
-							</p> 
+							</p>
 						</article>
 						<article class="txt type03">
 							<p>
@@ -147,8 +149,8 @@
 						<article class="txt type04">
 							<span>
 								<strong>"효과적이고 긍정적인 말 걸기가 아이의<br>
-								성장에 중요하며 똑똑하게 자라게 합니다."</strong>
-								<i>말 걸기 육아의 힘 내용, 김수연 박사</i> 
+									성장에 중요하며 똑똑하게 자라게 합니다."</strong>
+								<i>말 걸기 육아의 힘 내용, 김수연 박사</i>
 							</span>
 						</article>
 					</div>
@@ -158,7 +160,7 @@
 				<div class="mainSec-sec02">
 					<div class="inner">
 						<article class="titArea">
-							<h2>말하면서 즐겁게 몰입하는<br><em class="colorRed">AI 영어 대화형 수업</em>이 제공됩니다.</h2> 
+							<h2>말하면서 즐겁게 몰입하는<br><em class="colorRed">AI 영어 대화형 수업</em>이 제공됩니다.</h2>
 						</article>
 						<article class="txtLeft">
 							<p>말하기에 특화된 어플리케이션을 제공해요!</p>
@@ -177,7 +179,7 @@
 				<div class="mainSec-sec03">
 					<div class="inner">
 						<article class="titArea">
-							<h2>"Hey, buddy!<br> <em class="colorPurple2">Open English Play"</em></h2> 
+							<h2>"Hey, buddy!<br> <em class="colorPurple2">Open English Play"</em></h2>
 							<p>
 								영어 친구 버디를 불러보세요! 영어로 대화하며 학습을 하고<br>
 								기기를 제어하며 일상 얘기를 하면서 말하기가 쉬워집니다.
@@ -187,7 +189,7 @@
 								<i># 일상대화</i>
 								<i># 딕셔너리</i>
 								<i># 알람</i>
-								<i># 애플리케이션 실행</i> 
+								<i># 애플리케이션 실행</i>
 							</span>
 						</article>
 					</div>
@@ -195,11 +197,11 @@
 					<div class="slideWrap">
 						<div class="owl-carousel owl-theme">
 							<div class="item">
-								<span>1</span> 
+								<span>1</span>
 								<p>
 									"Hey, buddy! What day is it today?"
 									<em>오늘 날짜, 요일이 궁금하다면</em>
-								</p>  
+								</p>
 							</div>
 							<div class="item">
 								<span>2</span>
@@ -212,7 +214,7 @@
 								<span>3</span>
 								<p>
 									"Hey, buddy! What day is it today?"<br>
-									<em>오늘 날짜, 요일이 궁금하다면</em> 
+									<em>오늘 날짜, 요일이 궁금하다면</em>
 								</p>
 							</div>
 							<div class="item">
@@ -238,8 +240,8 @@
 				<div class="mainSec-sec04">
 					<div class="inner">
 						<article class="titArea">
-							<h2>스피킹 버디의 <em class="colorAqua">AI기반의 학습 애플리케이션</em></h2> 
-						</article> 
+							<h2>스피킹 버디의 <em class="colorAqua">AI기반의 학습 애플리케이션</em></h2>
+						</article>
 						<ul class="iconList">
 							<li>
 								<strong>기초 말하기 학습 콘텐츠<br>Emma & Guardians, Magic Adventure</strong>
@@ -296,18 +298,19 @@
 							<ul>
 								<li>영미권 아이들의 일상 생활 대화 (꿈, 미래, 직업 외)를 말하며 직접 연습할 수 있습니다.</li>
 								<li>해외 여행, 쇼핑, 레스토랑에서 필수 영어 표현을 말하며 익힙니다.</li>
-								<li>초등 교과서에 수록된 영어 질문과 답변을 실제 발화해 볼 수 있습니다.</li> 
+								<li>초등 교과서에 수록된 영어 질문과 답변을 실제 발화해 볼 수 있습니다.</li>
 							</ul>
 						</article>
 						<article class="txtArea">
-							 <div class="mov">  
-								 <p>
+							<div class="mov">
+								<p>
 									<strong>원어민 화상 회화</strong>
 									영어로 말해본 내용을 원어민과 직접 대화하기
-								 </p> 
+								</p>
 								<i>*튜터링 키즈 탑재 예정</i>
-								<button type="button" class="movIcon"><img src="../images/landing/img_mov.png" alt=""></button>
-							 </div>
+								<button type="button" class="movIcon"><img src="../images/landing/img_mov.png"
+										alt=""></button>
+							</div>
 							<p>
 								<strong>TALK WITH BUDDY</strong>
 								버디가 먼저 일상 생활 대화를 영어로 해보자고 권유합니다.
@@ -325,7 +328,7 @@
 								<p>
 									<strong>어린이 영어 말하기를 위해 디자인 된 전용 학습기</strong>
 									어린이의 음성, 신체적 환경과 행동 패턴을 고려하여 엉어 수업에 온전히 몰입할 수 있도록 설계되었습니다.
-								</p> 
+								</p>
 							</article>
 							<ul>
 								<li>영어 말하기를 위한<br>최적의 화면 각도</li>
@@ -337,7 +340,7 @@
 								<a href="#">스피킹 버디 디바이스 자세히 보기 ></a>
 							</span>
 						</div>
-						<div class="contType02"> 
+						<div class="contType02">
 							<article class="titArea">
 								<h2>스피킹 버디 전용 <br>AI 학습 관리 서비스</h2>
 								<p>
@@ -356,18 +359,18 @@
 								<dd>
 									<strong>버디챗</strong>
 									<ul>
-										<li>자녀의 음성 녹음, 영상 녹화 확인</li> 
-										<li>채팅 형식으로 칭찬, 격려 메세지를 전달</li> 
-									</ul> 
+										<li>자녀의 음성 녹음, 영상 녹화 확인</li>
+										<li>채팅 형식으로 칭찬, 격려 메세지를 전달</li>
+									</ul>
 								</dd>
 								<dd>
 									<strong>AI 학습 활동 통계</strong>
 									<ul>
-										<li>콘텐츠 별 학습 시간 확인</li> 
-										<li>AI가 분석한 주간 학습 성취도와 발화 결과 확인</li> 
-									</ul> 
+										<li>콘텐츠 별 학습 시간 확인</li>
+										<li>AI가 분석한 주간 학습 성취도와 발화 결과 확인</li>
+									</ul>
 								</dd>
-							</dl> 
+							</dl>
 							<span class="imgW"><img src="../images/landing/img_manage.png" alt=""></span>
 						</div>
 					</div>
@@ -440,7 +443,7 @@
 									</p>
 								</li>
 							</ul>
-						</div> 
+						</div>
 
 						<div class="innerType02">
 							<article class="titArea">
@@ -451,7 +454,7 @@
 								</p>
 							</article>
 							<div class="owl-carousel owl-theme">
-								<div class="item">  
+								<div class="item">
 									<div>
 										<img src="../images/landing/img05.png" alt="">
 										<span>
@@ -492,7 +495,7 @@
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="innerType03">
 							<article class="titArea">
 								<h2>스피킹 버디에 대한 <br>궁금한 점을 살펴보세요!</h2>
@@ -510,13 +513,13 @@
 								<li>
 									<a href="#none">
 										<em>Q1.</em>
-										<strong>스피킹 버디는 자녀<br> 
+										<strong>스피킹 버디는 자녀<br>
 											에게 친구가 되주나요?</strong>
 										<p>
 											영어로 자주 말을 걸어주는<br>
 											친구가 되어줍니다.
 										</p>
-									</a> 
+									</a>
 								</li>
 								<li>
 									<a href="#none">
@@ -531,7 +534,7 @@
 											어린이를 위한 AI 학습기가<br>
 											반드시 필요합니다.
 										</p>
-									</a> 
+									</a>
 								</li>
 								<li>
 									<a href="#none">
@@ -546,7 +549,7 @@
 											집을 포함한 전천후<br>
 											영어 환경이 구축되어야 합니다.
 										</p>
-									</a> 
+									</a>
 								</li>
 								<li class="faqGo pc">
 									<div>
@@ -570,7 +573,7 @@
 											이제까지 없었으며<br>
 											영어 몰입을 이끌어 냅니다.
 										</p>
-									</a> 
+									</a>
 								</li>
 								<li>
 									<a href="#none">
@@ -583,7 +586,7 @@
 											친구처럼 평생가는 영어와 학습<br>
 											습관을 형성합니다.
 										</p>
-									</a> 
+									</a>
 								</li>
 								<li class="faqGo mob">
 									<div>
@@ -596,7 +599,7 @@
 								</li>
 							</ul>
 						</div>
-						
+
 						<div class="innerType04">
 							<div class="owl-carousel owl-theme">
 								<div class="item type01">
@@ -606,7 +609,7 @@
 											<em class="colorPurple">누구보다 빨리 만나볼</em> 수 있는 기회!
 										</dt>
 										<dd>
-											스피킹 버디 OBT 테스트에 초대합니다. 
+											스피킹 버디 OBT 테스트에 초대합니다.
 											<i>참가 신청 기간 2020.02.22~04.20</i>
 										</dd>
 									</dl>
@@ -619,7 +622,7 @@
 											<em class="colorPurple">누구보다 빨리 만나볼</em> 수 있는 기회!
 										</dt>
 										<dd>
-											스피킹 버디 OBT 테스트에 초대합니다. 
+											스피킹 버디 OBT 테스트에 초대합니다.
 											<i>참가 신청 기간 2020.02.22~04.20</i>
 										</dd>
 									</dl>
@@ -632,7 +635,7 @@
 											<em class="colorPurple">누구보다 빨리 만나볼</em> 수 있는 기회!
 										</dt>
 										<dd>
-											스피킹 버디 OBT 테스트에 초대합니다. 
+											스피킹 버디 OBT 테스트에 초대합니다.
 											<i>참가 신청 기간 2020.02.22~04.20</i>
 										</dd>
 									</dl>
@@ -642,10 +645,10 @@
 						</div>
 
 
-					</div> 
+					</div>
 
 				</div>
-			</div>  
+			</div>
 		</section>
 
 		<article class="iconMenu">
@@ -668,15 +671,16 @@
 						<a href="##none">개인정보 취급방침</a>
 					</span>
 					<address>
-						<span><i>(주)인포마크</i> <i>대표: 최혁</i> <i>사업자등록번호: 119-81-54094</i> <i>통신판매업신고 제 2014 경기성남 1145호</i></span> 
-						<span><i>정보책임자: 안재범</i> <i>이메일 mediac@infomark.co.kr</i> <i>전화번호 1833-8221</i></span> 
+						<span><i>(주)인포마크</i> <i>대표: 최혁</i> <i>사업자등록번호: 119-81-54094</i> <i>통신판매업신고 제 2014 경기성남
+								1145호</i></span>
+						<span><i>정보책임자: 안재범</i> <i>이메일 mediac@infomark.co.kr</i> <i>전화번호 1833-8221</i></span>
 						<span>경기도 성남시 분당구 황새울로 216 휴맥스빌리지 3층 인포마크</span>
 					</address>
 					<p>Copylight© infomark.Corporation All Right Reserved.</p>
 				</div>
 
 				<div class="familySite">
-					<button type="button" class="familyBtn"><i>FAMILY SITE</i></button>	
+					<button type="button" class="familyBtn"><i>FAMILY SITE</i></button>
 					<ul class="familyMenu">
 						<li><a href="##none">menu1</a></li>
 						<li><a href="##none">menu2</a></li>
@@ -684,17 +688,21 @@
 					</ul>
 				</div>
 			</div>
-		</footer> 
-	</div> 
-	
+		</footer>
+	</div>
+
 	<script>
 		$(document).ready(function () {
 			var owl = $('.mainopy .owl-carousel');
 			owl.owlCarousel({
+				items: 3,
 				margin: 0,
 				dots: true,
 				nav: false,
-				loop: true, 
+				loop: true,
+				autoplay: true,
+				autoplayTimeout: 3500,
+				autoplayHoverPause: true,
 				responsive: {
 					0: {
 						items: 1
@@ -706,10 +714,10 @@
 		$(document).ready(function () {
 			var owl = $('.slideWrap .owl-carousel');
 			owl.owlCarousel({
-				margin:20,
+				margin: 20,
 				dots: false,
 				nav: true,
-				loop: true, 
+				loop: true,
 				responsive: {
 					0: {
 						items: 2
@@ -737,7 +745,7 @@
 				responsive: {
 					0: {
 						items: 2
-					}, 
+					},
 					1280: {
 						items: 3
 					}
@@ -752,6 +760,9 @@
 				dots: true,
 				nav: true,
 				loop: true,
+				autoplay: true,
+				autoplayTimeout: 3500,
+				autoplayHoverPause: true,
 				responsive: {
 					0: {
 						items: 1
@@ -759,8 +770,9 @@
 				}
 			})
 		})
-		
-		
+
+
 	</script>
 </body>
-</html> 
+
+</html>
