페이지 수정

--- a/myWorks/web/html/strategy.html
+++ b/myWorks/web/html/strategy.html
@@ -77,10 +77,10 @@
 							<img src="../images/strategy/@img_02.jpg" alt="">
 						</div>
 						<div id="tab3" class="tabcontent">
-							<img src="../images/strategy/@img_04.jpg" alt="">
+							<img src="../images/strategy/@img_03.jpg" alt="">
 						</div>
 						<div id="tab4" class="tabcontent">
-							<img src="../images/strategy/@img_03.jpg" alt="">
+							<img src="../images/strategy/@img_04.jpg" alt="">
 						</div>
 						<div class="strategyDltxt">
 							<div>
@@ -247,9 +247,11 @@
 							</div>
 							<div class="textbookRight">
 								<span>
-									<i><img src="../images/strategy/icon13.png" alt=""></i>
-									<i><img src="../images/strategy/icon14.png" alt=""></i>
+									<button type="button" class="active"><img src="../images/strategy/icon13.png" alt=""></button><!--Emma & Guardians-->
+									<button type="button"><img src="../images/strategy/icon14.png" alt=""></button><!--Magic Adventure-->
 								</span>
+
+								<!--Emma & Guardians-->
 								<dl>
 									<dt>Emma & Guardians</dt>
 									<dd>
@@ -259,6 +261,17 @@
 										</ul>
 									</dd>  
 								</dl>
+
+								<!--Magic Adventure 
+								<dl>
+									<dt>Magic Adventuress</dt>
+									<dd>
+										<ul>
+											<li>[기본 영어] 교재 6권, 132차시 흥미 있는 만화 기반 AI 스피킹 교재, 1년간의 커리큘럼</li>
+										</ul>
+									</dd>  
+								</dl>-->
+								
 								<div class="editor">
 									<p>
 										<em><img src="../images/strategy/img_per.jpg" alt=""></em>
