tn수정사항 업데이트

--- a/myWorks/web/html/technology.html
+++ b/myWorks/web/html/technology.html
@@ -752,7 +752,7 @@
 		<footer>
 			<div class="inner">
 				<div class="copyArea">
-					<mark>infomark</mark>
+					<a href="http://www.infomark.co.kr/" target="block">infomark</a>
 					<span class="footerMenu">
 						<a href="#">회사소개</a>
 						<a href="#">개인정보 취급방침</a>
@@ -769,9 +769,10 @@
 				<div class="familySite">
 					<button type="button" class="familyBtn"><i>FAMILY SITE</i></button>
 					<ul class="familyMenu">
-						<li><a href="#">menu1</a></li>
-						<li><a href="#">menu2</a></li>
-						<li><a href="#">menu3</a></li>
+						<li><a href="http://www.infomark.co.kr/" target="block">인포마크</a></li>
+						<li><a href="http://www.markt.co.kr/" target="block">마크티</a></li>
+						<li><a href="http://www.altech.kr/" target="block">ALT</a></li>
+						<li><a href="https://www.roborang.com/" target="block">로보랑</a></li>
 					</ul>
 				</div>
 			</div>
