--- a/myWorks/web/html/main.html
+++ b/myWorks/web/html/main.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="../js/common.js"></script>
 </head>
 <body>
-	<div id="wrapper">
+	<div id="wrapper"> 
 		<header>
 			<div class="inner">
 				<h1><a href="#">Buddy</a></h1>
@@ -26,7 +26,7 @@
 						<li><a href="#">학습콘텐츠</a></li>
 						<li>
 							<a href="#" class="subMenu">사용안내</a>
-							<ul class="depth2 db">
+							<ul class="depth2">
 								<li><a href="#">사용안내</a></li>
 								<li><a href="#">FAQ</a></li>
 								<li><a href="#">공지사항</a></li>
@@ -662,7 +662,7 @@
 		<footer>
 			<div class="inner">
 				<div class="copyArea">
-					<mark>infomark</mark>
+					<a href="http://www.infomark.co.kr/" target="block">infomark</a>
 					<span class="footerMenu">
 						<a href="##none">회사소개</a>
 						<a href="##none">개인정보 취급방침</a>
@@ -678,9 +678,10 @@
 				<div class="familySite">
 					<button type="button" class="familyBtn"><i>FAMILY SITE</i></button>	
 					<ul class="familyMenu">
-						<li><a href="##none">menu1</a></li>
-						<li><a href="##none">menu2</a></li>
-						<li><a href="##none">menu3</a></li>
+						<li><a href="http://www.infomark.co.kr/" target="block">인포마크</a></li>
+						<li><a href="http://www.markt.co.kr/" target="block">마크티</a></li>
+						<li><a href="http://www.altech.kr/" target="block">ALT</a></li>
+						<li><a href="https://www.roborang.com/" target="block">로보랑</a></li>
 					</ul>
 				</div>
 			</div>
