--- a/urbankitchen/html/main.html
+++ b/urbankitchen/html/main.html
@@ -72,10 +72,10 @@
 			</div>
 			<div class="mainsec-sec02">
 				<ul class="icon-menu">
-					<li><a href="#">청춘레시피</a></li>
-					<li><a href="#">청춘푸드몰</a></li>
-					<li><a href="#">경연대회</a></li>
-					<li><a href="#">청춘도시락</a></li>
+					<li class="recipe"><a href="#">청춘레시피</a></li>
+					<li class="foodmall"><a href="#">청춘푸드몰</a></li>
+					<li class="contest"><a href="#">경연대회</a></li>
+					<li class="lunchbox"><a href="#">청춘도시락</a></li>
 				</ul>
 			</div>
 			<div class="mainsec-sec03">
