아이콘변경

--- a/urbankitchen/html/main.html
+++ b/urbankitchen/html/main.html
@@ -5,7 +5,7 @@
 	<title>buddy</title> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="../css/style.css" rel="stylesheet">
+	<link href="../css/style.css" rel="stylesheet">  
 	<script type="text/javascript" src="../js/jquery-3.3.1.min.js" charset="utf-8"></script> 
 	<script type="text/javascript" src="../js/owl.carousel.js"></script>
 	<script type="text/javascript" src="../js/common.js"></script>
@@ -13,7 +13,7 @@
 <body class="main">
 	<div id="wrapper"> 
 		<header>
-			<button type="button" class="btn-menu">menu</button>
+			<button type="button" class="btn-menu"><i class="fa fa-bars"></i><em>menu</em></button>
 			<h1>어반키친</h1> 
 			<button type="button" class="btn-my">my</button>
 			<nav class="side-menu">
@@ -26,7 +26,7 @@
 					<li><a href="#">정산내역</a></li>
 					<li><a href="#">장바구니</a></li>
 				</ul> 
-				<button type="button" class="btn-close">닫기</button>
+				<button type="button" class="btn-close"><i class="fa fa-remove"></i><em>닫기</em></button>
 			</nav>
 		</header>  
 
@@ -131,9 +131,9 @@
 						<em>by.청춘요정</em>
 					</p>
 					<span>
-						<i class="icon01">1,030</i>
-						<i class="icon02">83</i>
-						<i class="icon03">3,100</i>
+						<em><i class="fa fa-eye"></i>1,030</em>
+						<em><i class="fa fa-bookmark-o"></i>83</em>
+						<em><i class="fa fa-heart-o"></i>3,100</em>
 					</span>
 				</div>
 			</div> 
