--- a/urbankitchen/html/scheduler.html
+++ b/urbankitchen/html/scheduler.html
@@ -5,8 +5,7 @@
 	<title>buddy</title> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="../css/style.css" rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">  
+	<link href="../css/style.css" rel="stylesheet">  
 	<script type="text/javascript" src="../js/jquery-3.3.1.min.js" charset="utf-8"></script> 
 	<script type="text/javascript" src="../js/owl.carousel.js"></script>
 	<script type="text/javascript" src="../js/common.js"></script>
@@ -14,7 +13,7 @@
 <body>
 	<div id="wrapper"> 
 		<header>
-			<button type="button" class="btn-back"><i class="fas fa-angle-left"></i><em>이전</em></button>
+			<button type="button" class="btn-back"><i class="fa fa-chevron-left"></i><em>이전</em></button>
 			<h1>메뉴 & 공유주방 스케쥴러</h1> 
 			<button type="button" class="btn-my">my</button>
 			<nav class="side-menu">
@@ -27,7 +26,7 @@
 					<li><a href="#">정산내역</a></li>
 					<li><a href="#">장바구니</a></li>
 				</ul> 
-				<button type="button" class="btn-close">닫기</button>
+				<button type="button" class="btn-close"><i class="fa fa-remove"></i><em>닫기</em></button>
 			</nav>
 		</header>  
 
@@ -36,9 +35,9 @@
 				<div class="calendar-head">
 					<h3>오늘</h3>
 					<span>
-						<button type="button" class="btn-prev"><i class="fas fa-angle-left"></i><em>이전달</em></button>
+						<button type="button" class="btn-prev"><i class="fa fa-chevron-left"></i><em>이전달</em></button>
 						<span>2020년 8월</span>
-						<button type="button" class="btn-next"><i class="fas fa-angle-right"></i><em>다음달</em></button>
+						<button type="button" class="btn-next"><i class="fa fa-chevron-right"></i><em>다음달</em></button>
 					</span>
 					<button type="button" class="btn-add">+</button>
 				</div>
@@ -153,9 +152,9 @@
 				<fieldset> 
 					<input type="text" placeholder="일정제목">
 					<span class="time-area">
-						<button type="button" class="start-time">시작시간<i class="fas fa-chevron-down"></i></button>
+						<button type="button" class="start-time">시작시간<i class="fa fa-angle-down"></i></button>
 						<em>~</em> 
-						<button type="button" class="end-time">종료시간<i class="fas fa-chevron-down"></i></button>
+						<button type="button" class="end-time">종료시간<i class="fa fa-angle-down"></i></button>
 					</span>
 					<textarea placeholder="내용을입력해주세요"></textarea>
 					<span class="file-area">
