--- a/urbankitchen/html/scheduler.html
+++ b/urbankitchen/html/scheduler.html
@@ -119,7 +119,7 @@
 				<div id="tab2" class="schedulewrap current">
 					<div class="schedule-head">
 						<h2>Activity</h2>
-						<button type="button" class="btn-all"><em>전체보기</em><i class="fas fa-check"></i></button>
+						<button type="button" class="btn-all"><em>전체보기</em><i class="fa fa-check"></i></button>
 					</div>
 				
 					<ul class="schedule-list">
