신규페이지

--- a/urbankitchen/html/main.html
+++ b/urbankitchen/html/main.html
@@ -91,6 +91,7 @@
 								<strong>3,800원</strong>
 								<s>3,800원</s>
 							</a>
+							<button type="button"><i class="fa fa-cart-plus"></i></button>
 						</div>
 						<div class="item">
 							<a href="#none">
@@ -100,6 +101,7 @@
 								<strong>3,800원</strong>
 								<s>3,800원</s>
 							</a>
+							<button type="button"><i class="fa fa-cart-plus"></i></button>
 						</div>
 						<div class="item">
 							<a href="#none">
@@ -109,6 +111,7 @@
 								<strong>3,800원</strong>
 								<s>3,800원</s>
 							</a>
+							<button type="button"><i class="fa fa-cart-plus"></i></button>
 						</div> 
 					</div>
 			
