--- a/소통협력센터/publishing_list.html
+++ b/소통협력센터/publishing_list.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=1280">
-	<link rel="stylesheet" type="text/css" href="_guide/guide.css">
-	<script type="text/javascript" src="_guide/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="_guide/fileList_new.js"></script>
+	<link rel="stylesheet" type="text/css" href="guide/guide.css">
+	<script type="text/javascript" src="guide/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="guide/fileList_new.js"></script>
 </head>
 
 <body class="htmlList">
